--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "parcel": "^2.14.4"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "tailwindcss": "^4.1.5"
   },
   "browserlist": [
     "last 2 versions"
