--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.34",
     "parcel": "^2.14.4"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/postcss": "^4.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "tailwindcss": "^4.1.5"
   },
