--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@testing-library/react": "^16.3.0",
     "@types/react-redux": "^7.1.34",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.14.4"
   },
   "dependencies": {
